# tg_latest_stickers

./: .gitignore  Cargo.toml  README.md
src/: data.rs  main.rs
