[package]
name = "tg_bot"
version = "0.1.0"
authors = ["Zotho <svjatoslavalekseef2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { version = "0.8.0", git = "https://github.com/zotho/telegram-bot.git" }
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "fs", "signal"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

tracing = { version = "0.1.9", optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.2.15", optional = true }

[features]
trace = ["tracing", "tracing-futures", "tracing-subscriber"]